<resources>
    <!-- MainActivity related string declarations -->
    <string name="app_name">Car Lock App</string>
    <string name="title_home">Home</string>
    <string name="title_display">Display</string>
    <string name="title_settings">Settings</string>

    <!-- Home related string declarations -->
    <string name="select_bt_device_title">Connect</string>
    <string name="select_bt_device_desc">Select a paired Bluetooth device to connect to and then tap on the floating button to synchronize the settings</string>
    <string name="bt_list_error">Your device doesn\'t support Bluetooth</string>
    <string name="bt_permission_denied_title">Feature unavailable</string>
    <string name="bt_permission_denied_desc">Bluetooth features are unavailable because this app needs permissions that were not given</string>
    <string name="bt_permission_denied_settings">I\'ve changed my mind</string>
    <string name="bt_permission_denied_ack">OK</string>
    <string name="bt_rationale_title">Bluetooth permissions</string>
    <string name="bt_rationale_desc">Bluetooth permissions are needed for connecting your phone to the device</string>
    <string name="bt_rationale_cancel">Cancel</string>
    <string name="bt_rationale_ack">OK</string>
    <string name="bt_list_title">Paired Bluetooth devices</string>
    <string name="bt_list_refresh">Refresh the list of paired devices</string>
    <string name="bt_connected_to_remote">Successfully connected to\ </string>
    <string name="bt_no_remote_connection">Connection to remote device not established</string>
    <string name="bt_connection_error">Can\'t connect to\ </string>
    <string name="bt_socket_error">Connection closed by remote device</string>
    <string name="bt_command_error">Unexpected error occurred. Please try again</string>
    <string name="sync_btn_desc">Synchronize settings from device</string>
    <string name="unknown_lock_state_title">Unknown lock state</string>
    <string name="unknown_lock_state_desc">Synchronize with the Bluetooth device to get the lock state</string>
    <string name="locked_title">Locked</string>
    <string name="locked_desc">Tap again on this button to unlock the car doors</string>
    <string name="unlocked_title">Unlocked</string>
    <string name="unlocked_desc">Tap again on this button to lock the car doors</string>

    <!-- Display related string declarations -->
    <string name="contact_title">Contact information</string>
    <string name="contact_desc">Fill in your name and phone number that you want to display</string>
    <string name="contact_name">Name</string>
    <string name="contact_name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="contact_phone_number">Phone number</string>
    <string name="contact_phone_number_digits">1234567890 -+()</string>
    <string name="contact_show">Show information on display</string>
    <string name="contact_save_btn">Save</string>
    <string name="contact_saved">Contact updated successfully</string>

    <!-- Settings related string declarations -->
    <string name="device_title">Device information</string>
    <string name="device_desc">Here you can modify the device credentials, just fill in the fields you want to change and leave blank those you don\'t want to modify</string>
    <string name="device_name">Name</string>
    <string name="device_name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 -_.()</string>
    <string name="device_pin">PIN</string>
    <string name="device_pin_digits">1234567890</string>
    <string name="device_save_btn">Save</string>
    <string name="device_empty_fields">Please fill in at least one field</string>
    <string name="device_save_dialog_title">Apply settings?</string>
    <string name="device_save_dialog_desc">After applying the settings, the device will restart and you\'ll need to reconnect.</string>
    <string name="device_save_dialog_negative">No</string>
    <string name="device_save_dialog_positive">Yes</string>
    <string name="device_cred_saved">Device settings applied successfully</string>
</resources>