<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cipriantxt.carlockapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_bt_device_list"
            app:destination="@id/navigation_bt_device_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bt_device_list"
        android:name="com.cipriantxt.carlockapp.ui.home.SelectBtDeviceFragment"
        android:label="@string/bt_list_title"
        tools:layout="@layout/fragment_select_bt_device" />

    <fragment
        android:id="@+id/navigation_display"
        android:name="com.cipriantxt.carlockapp.ui.display.DisplayFragment"
        android:label="@string/title_display"
        tools:layout="@layout/fragment_display" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.cipriantxt.carlockapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>